# codebot

./: .gitignore  IMPLEMENTATION.md  README.md  example-task.yaml  main.py  pyproject.toml
codebot/: __init__.py  claude_md_detector.py  claude_runner.py  cli.py  environment.py  git_ops.py  github_pr.py  models.py  orchestrator.py  parser.py  review_processor.py  utils.py
codebot/claude/: md_detector.py  runner.py
codebot/cli_runner/: runner.py
codebot/core/: environment.py  git_ops.py  github_app.py  github_pr.py  models.py  orchestrator.py  parser.py  storage.py  storage_sqlite.py  task_store.py  utils.py
codebot/server/: api.py  app.py  auth.py  config.py  flask_app.py  poller.py  review_processor.py  review_runner.py  task_processor.py  task_queue.py  web_ui.py  webhook.py
codebot/server/templates/: tasks.html
docs/: architecture.md  cli-usage.md  configuration.md  examples.md  http-api.md  index.md  installation.md  troubleshooting.md  webhooks.md
tests/: __init__.py  test_imports.py
